bring back PCA in case we need it

--- a/vignettes/still_life_form_content.Rmd
+++ b/vignettes/still_life_form_content.Rmd
@@ -310,3 +310,53 @@ ggplot(wch44c, aes(x = fct_reorder(artist, votes), y = votes, fill = artist == "
 ggsave(filename = "wch44c.pdf", width = 5, height = 4)
 
 ```
+
+
+```{r pca, fig.width=4, fig.height=4}
+
+single_rf <- rfl$motif_only.simple.definite_only.qualified_only.classification
+
+rfl_pca <- map(set_names(levels(single_rf$predicted)), function(x) {
+  rf_local_importance(single_rf) %>% 
+    semi_join(dt_compiled %>% filter(artist == x[1]), by = c("rowname" = "painting_code")) %>% 
+    column_to_rownames("rowname") %>% 
+    prcomp()
+  
+})
+
+join_loadings <- function(pca) {
+  pca_loadings_df(pca) %>% 
+    left_join(dt_motif_labels, by = c("rowname" = "motif_code")) %>% 
+    mutate(varlab = ifelse(is.na(wrapped_motif_label), rowname, motif_label))
+}
+
+rfl_loadings <- map(rfl_pca, join_loadings)
+rfl_observations <- map(rfl_pca, pca_obs_df)
+
+artist_motif_plot <- function(l, o, m = 12, hue = "red") {
+  l %>% 
+    filter(min_rank(desc(power)) <= m) %>% 
+    ggplot(aes(x = PC1, y = PC2)) +
+    geom_text(data = o, aes(label = rownames), alpha = 0.5) +
+    geom_segment(aes(xend = 0, yend = 0), color = hue) +
+    geom_label_repel(aes(label = varlab))
+}
+
+rfl_plots <- map2(rfl_loadings, rfl_observations, artist_motif_plot) %>% 
+  map2(., names(rfl_observations), function(x, y) x + ggtitle(y))
+```
+
+```{r}
+
+mds_motif <- cmdscale(dist(known_only_motif$proximity)) %>%
+  as.data.frame() %>% 
+  rownames_to_column(var = "painting_code") %>% 
+  inner_join(dt_painting_artist, by = "painting_code") %>% 
+  mutate_at(vars(V1, V2), scales::rescale)
+
+ggplot(mds_motif, aes(x = V1, y = V2)) +
+  geom_point(alpha = 0.5) +
+  geom_point(data = filter(mds_motif, artist1 == "Pieter Claesz"), color = "red")
+```
+
+
